@@ -114,7 +114,8 @@
 			"extlibs/jquery/jquery.js",
 			"extlibs/jquery-ui/jquery-ui.js",
 			"classes/Hyperiums7.js",
-			"scripts/contentscripts/sendmessage.js"
+			"scripts/contentscripts/sendmessage.js",
+			"scripts/contentscripts/backupbuddies.js"
 		],
 		"css": [
 			"extlibs/jquery-ui/jquery-ui.css",
