@@ -32,6 +32,35 @@ chrome.runtime.onMessage.addListener(function (message, sender, sendResponse) {
 		};
 		chrome.storage.local.set(storage);
 		return true;
+	case 'recordBackupBuddyLogin':
+		var key = 'backupBuddyLogins.' + message.playerId;
+		chrome.storage.sync.get(key, function (storage) {
+			if (!storage[key]) {
+				storage[key] = [];
+			}
+			storage[key].push(new Date().getTime());
+			chrome.storage.sync.set(storage);
+		});
+		return false;
+	case 'getNumBackupBuddyLoginsIn7Days':
+		var sevenDaysAgo = new Date().getTime() - 7 * 24 * 60 * 60 * 1000;
+		chrome.storage.sync.get(function (storage) {
+			var numLogins = [];
+			$.each(storage, function (key, logins) {
+				var match = /^backupBuddyLogins\.(\d+)$/.exec(key), playerId;
+				if (match && match[1]) {
+					playerId = parseFloat(match[1]);
+					numLogins[playerId] = 0;
+					$.each(logins, function (_, login) {
+						if (sevenDaysAgo < login) {
+							numLogins[playerId]++;
+						}
+					});
+				}
+			});
+			sendResponse(numLogins);
+		});
+		return true;
 	}
 });
 
