@@ -5,6 +5,7 @@ XXXX-XX-XX XX:XX:XX Version 0.1.0
 * Added information about deployed fleets
 * Added coordinates to moving fleets
 * Added separate link for going to last page of thread
+* Added count and display number of backup buddy logins
 
 2013-11-29 15:44:00 Version 0.0.6
 * Added Cache Overview
